// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notificationReducer NOTIFY adds notification to given ID 1`] = `
Immutable.Map {
  APPLICATION: Immutable.List [
  ],
  AUTHENTICATION: Immutable.List [
    Immutable.Map {
      id: 0,
      message: "message",
      level: "level",
    },
  ],
}
`;

exports[`notificationReducer NOTIFY adds notification to global id when ID not present 1`] = `
Immutable.Map {
  APPLICATION: Immutable.List [
    Immutable.Map {
      id: 0,
      message: "message",
      level: "level",
    },
  ],
  AUTHENTICATION: Immutable.List [
  ],
}
`;

exports[`notificationReducer NOTIFY increments notification ID property 1`] = `
Immutable.Map {
  APPLICATION: Immutable.List [
  ],
  AUTHENTICATION: Immutable.List [
    Immutable.Map {
      id: 0,
      message: "message",
      level: "level",
    },
    Immutable.Map {
      id: 1,
      message: "message",
      level: "level",
    },
  ],
}
`;

exports[`notificationReducer destroy removes given notification from the given collection 1`] = `
Immutable.Map {
  APPLICATION: Immutable.List [
  ],
  AUTHENTICATION: Immutable.List [
    Immutable.Map {
      id: 0,
      message: "message",
      level: "level",
    },
  ],
}
`;

exports[`notificationReducer destroy removes given notification from the given collection 2`] = `
Immutable.Map {
  APPLICATION: Immutable.List [
  ],
  AUTHENTICATION: Immutable.List [
  ],
}
`;
